# simple_sm

./: .clang-format  .gitignore  CMakeLists.txt
include/simple/sm/: config.hpp  sm.hpp  sm_we.hpp  state_actions.hpp  state_traits.hpp
include/simple/sm/state_actions/: enter.hpp  exit.hpp  fwd.hpp  handle_event.hpp  update.hpp
include/ssm/: config.hpp  enter.hpp  exit.hpp  sm.hpp  state_actions.hpp
include/ssm/state_actions/: enter.hpp  exit.hpp  fwd.hpp  handle_event.hpp  update.hpp
test/: CMakeLists.txt  another_unit.cpp  another_unit.hpp  ssm_tests.cpp
